[gd_scene load_steps=11 format=3 uid="uid://dqxxhwuau4w7o"]

[ext_resource type="Script" uid="uid://dq648hmylocmh" path="res://src/scripts/MainScene.gd" id="1_main_script"]
[ext_resource type="PackedScene" uid="uid://c3fxp4k5n6m7o" path="res://src/scenes/Player.tscn" id="2_player_scene"]
[ext_resource type="Script" uid="uid://b8hss1khqfeby" path="res://src/scripts/BackgroundScroller.gd" id="3_background_script"]
[ext_resource type="Script" uid="uid://3q2768il6x3c" path="res://src/scripts/GroundScroller.gd" id="4_ground_script"]
[ext_resource type="Texture2D" uid="uid://j7rf8vbqe363" path="res://assets/sprites/kenney_pixel-platformer/Tiles/tile_0151.png" id="5_coin_texture"]
[ext_resource type="Script" path="res://src/scripts/GameOverScreen.gd" id="6_gameover_script"]
[ext_resource type="Script" path="res://src/scripts/UpgradeUI.gd" id="7_upgrade_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.5, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1, 0.3, 0.1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_script")

[node name="PlayArea" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 426.0
grow_horizontal = 2

[node name="BackgroundScroller" type="Node2D" parent="PlayArea"]
script = ExtResource("3_background_script")

[node name="GroundScroller" type="Node2D" parent="PlayArea"]
script = ExtResource("4_ground_script")

[node name="Player" parent="PlayArea" instance=ExtResource("2_player_scene")]
position = Vector2(150, 320)

[node name="DistanceLabel" type="Label" parent="PlayArea"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.2, 0.1, 0.5, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "0 m"
horizontal_alignment = 2

[node name="GoldUI" type="Panel" parent="PlayArea"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CoinIcon" type="TextureRect" parent="PlayArea/GoldUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -16.0
offset_right = 42.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("5_coin_texture")
stretch_mode = 4

[node name="GoldLabel" type="Label" parent="PlayArea/GoldUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -18.0
offset_right = -10.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UIArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -854.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="ColorRect" parent="UIArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.4, 1)

[node name="UpgradeUI" type="Control" parent="UIArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_upgrade_script")

[node name="Title" type="Label" parent="UIArea/UpgradeUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 36
text = "育成"
horizontal_alignment = 1

[node name="CoinDisplay" type="Panel" parent="UIArea/UpgradeUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CoinIcon" type="TextureRect" parent="UIArea/UpgradeUI/CoinDisplay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -16.0
offset_right = 42.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("5_coin_texture")
stretch_mode = 4

[node name="CoinLabel" type="Label" parent="UIArea/UpgradeUI/CoinDisplay"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -18.0
offset_right = -10.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpgradeContainer" type="HBoxContainer" parent="UIArea/UpgradeUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="CharacterUpgrade" type="Panel" parent="UIArea/UpgradeUI/UpgradeContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="Title" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "キャラクター"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "レベル 1"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "HP: 100 → 120"
horizontal_alignment = 1

[node name="CostContainer" type="HBoxContainer" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -120.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="CoinIcon" type="TextureRect" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade/CostContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_coin_texture")
stretch_mode = 4

[node name="CostLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade/CostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 24
text = "10"
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="UIArea/UpgradeUI/UpgradeContainer/CharacterUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
text = "レベルアップ"

[node name="WeaponUpgrade" type="Panel" parent="UIArea/UpgradeUI/UpgradeContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="Title" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "武器"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "レベル 1"
horizontal_alignment = 1

[node name="DamageLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "攻撃力: 20 → 25"
horizontal_alignment = 1

[node name="CostContainer" type="HBoxContainer" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -120.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="CoinIcon" type="TextureRect" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade/CostContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_coin_texture")
stretch_mode = 4

[node name="CostLabel" type="Label" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade/CostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 24
text = "10"
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="UIArea/UpgradeUI/UpgradeContainer/WeaponUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
text = "レベルアップ"

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_gameover_script")

[node name="Overlay" type="ColorRect" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Container" type="VBoxContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="GameOverLabel" type="Label" parent="GameOverScreen/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="GameOverScreen/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "到達距離: 0 m"
horizontal_alignment = 1

[node name="CoinResultLabel" type="Label" parent="GameOverScreen/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 32
text = "獲得コイン: 0 枚"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="GameOverScreen/Container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ReturnButton" type="Button" parent="GameOverScreen/Container/ButtonContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "タイトルに戻る"
